test/asm/section-align-large-ofs.err
error: The absolute alignment offset (99) must be less than alignment size (4)
    at section-align-large-ofs.asm(1)
Assembly aborted with 1 error!
