test/asm/section-align-large-ofs.asm
section "test", rom0, align[2, 99]
